k8s/deployment.yaml
# 1. Python App (Project A)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: aakashhh2001/python-app:latest # CI will update this
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: default
spec:
  selector:
    app: python-app
  ports:
    - port: 80
      targetPort: 5000
---
# 2. Nginx Demo App (Project B)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: nginx-app
  ports:
    - port: 80
      targetPort: 80
